k8s/overlays/prod-k8s/patches/replicas.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: placeholder  # overridden by Kustomize target matcher
spec:
  replicas: 2
