k8s/overlays/prod-k8s/patches/resources.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: placeholder
spec:
  template:
    spec:
      containers:
        - name: app
          resources:
            requests:
              cpu: 200m
              memory: 1Gi
            limits:
              cpu: "2"
              memory: 2Gi
